add noise from https://github.com/joshinils/noise

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -130,6 +130,7 @@ set(ENGINE_HEADER_FILES
   ${MATH_DIR}/vector.h
 )
 
+set(NOISE_DIR "${CMAKE_SOURCE_DIR}/engine/lib/noise")
 
 set(GLAD_DIR "${CMAKE_SOURCE_DIR}/engine/vendor/glad")
 
@@ -157,6 +158,7 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/spdlog)
 add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/glfw-3.3.2)
 add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/glm/glm)
 #add_subdirectory(${MATH_DIR})
+add_subdirectory(${NOISE_DIR})
 #add_library(glm SHARED ${CMAKE_SOURCE_DIR}/engine/vendor/glm/glm)
 add_library(glad STATIC ${GLAD_DIR}/src/glad.c)
 #add_subdirectory(${CMAKE_SOURCE_DIR}/engine/vendor/imgui)
@@ -165,7 +167,7 @@ add_library(glad STATIC ${GLAD_DIR}/src/glad.c)
 # target_include_directories(glad PRIVATE "${GLAD_DIR}/include")
 
 find_package(OpenGL REQUIRED)
-target_link_libraries(engine PUBLIC OpenGL::GL glad glfw glm stb_image spdlog)
+target_link_libraries(engine PUBLIC OpenGL::GL glad glfw glm stb_image spdlog bucket_noise)
 
 # add_library("glad" "${GLAD_DIR}/src/glad.c")
 # target_include_directories(engine PRIVATE "${GLAD_DIR}/include")
