--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - master
+      - 27-help-understand-engine
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
