--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -14,15 +14,12 @@ jobs:
       - name: Build
         run: |
           sudo apt-get install -y doxygen doxygen-doc doxygen-gui graphviz
-          doxygen docs/doxygen.conf
-          sudo rm -rf engine/
-          sudo rm -rf sandbox/
-          sudo rm -rf screenshots/
-          sudo rm -rf tools/
-          sudo rm CMakeLists.txt README.md .vimrc build.sh .gitignore
-          git checkout -fb gh-pages
+          sudo rm -rf $(find -not -path "./docs/*" -not -path "." -type d)
+
+          git init
           git config --global user.name "Docs CI"
           git config --global user.email "philipp+bucket-engine-docs-auto-ci@godesteem.de"
+          git checkout -fb gh-pages
           git add .
           git commit -m "deploy docs"
           git push origin gh-pages
