--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,16 +69,13 @@ find_package(Doxygen)
 if (DOXYGEN_FOUND)
   # set input and output files
   set(DOXYGEN_IN ${CMAKE_SOURCE_DIR}/docs/doxygen.conf)
-  set(DOXYGEN_OUT ${CMAKE_SOURCE_DIR}/docs/doxygen.conf.out)
 
-  # request to configure the file
-  configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
   message("Doxygen build started")
 
   # note the option ALL which allows to build the docs together with the application
   add_custom_target( doc_doxygen ALL
-    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
-    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_IN}
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/
     COMMENT "Generating API documentation with Doxygen"
     VERBATIM )
 else (DOXYGEN_FOUND)
