extract objfile into new file

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -38,6 +38,7 @@ set(ENGINE_SOURCE_FILES
   ${CMAKE_SOURCE_DIR}/engine/src/engine/renderer/OrthographicCameraController.cpp
   ${CMAKE_SOURCE_DIR}/engine/src/engine/renderer/Texture.cpp
   ${CMAKE_SOURCE_DIR}/engine/src/engine/renderer/Mesh.cpp
+  ${CMAKE_SOURCE_DIR}/engine/src/engine/renderer/ObjFile.cpp
 
   # game
   ${CMAKE_SOURCE_DIR}/engine/src/engine/game/Level.cpp
@@ -102,6 +103,7 @@ set(ENGINE_HEADER_FILES
   ${CMAKE_SOURCE_DIR}/engine/src/engine/renderer/OrthographicCameraController.h
   ${CMAKE_SOURCE_DIR}/engine/src/engine/renderer/Texture.h
   ${CMAKE_SOURCE_DIR}/engine/src/engine/renderer/Mesh.h
+  ${CMAKE_SOURCE_DIR}/engine/src/engine/renderer/ObjFile.h
 
   # game
   ${CMAKE_SOURCE_DIR}/engine/src/engine/game/Level.h
